<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_large"
    android:gravity="center">

    <Button
        android:id="@+id/btnModelManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/model_management"
        android:layout_marginBottom="@dimen/padding_medium"
        android:minWidth="200dp"
        android:minHeight="@dimen/button_height" />

    <Button
        android:id="@+id/btnTaskCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_create"
        android:layout_marginBottom="@dimen/padding_medium"
        android:minWidth="200dp"
        android:minHeight="@dimen/button_height" />

    <Button
        android:id="@+id/btnTaskControl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_control"
        android:minWidth="200dp"
        android:minHeight="@dimen/button_height" />

</LinearLayout>
